hphp/hack/test/typecheck/array_unification/varray.php.exp
File "varray.php", line 24, characters 10-18:
Invalid return type (Typing[4110])
  File "varray.php", line 23, characters 38-41:
  Expected `bool`
  File "varray.php", line 24, characters 10-18:
  But got `vec<int>`
